<resources>
    <string name="app_name">NewApplication</string>
    <string name="refresh_fields">Clear All?</string>
    <string name="please_create_your_account">Please, create your account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sing_up">Sing Up</string>
    <string name="wrong_data">Please, put correct data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>